--- a/FastBlogs/FastBlogs.csproj
+++ b/FastBlogs/FastBlogs.csproj
@@ -14,6 +14,18 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
+    <Folder Include="ViewModels\Dialogs\" />
+    <Folder Include="Views\Dialogs\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MetaWeblogAPI\MetaWeblogAPI.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="FastBlogs.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
